syntax = "proto3";
option csharp_namespace = "CommonLib.Protocol";

enum HeaderType {
    T_LoginRequest = 0;
    T_LoginResponse = 1;
    T_LogoutRequest = 2;
    T_LogoutResponse = 3;
    T_MessageRequest = 4;
    T_MessageResponse = 5;
}

message Header {
    HeaderType Type = 1;
}

  
message LoginRequest {
    string AccountId = 1;
    string RoomId = 2;
    int32 Level = 3;
    string NickName = 4;
}

message LoginResponse {
    int32 Result = 1;
    string AccountId = 2;
}

message LogoutRequest {
    string AccountId = 1;
}

message LogoutResponse {
    int32 Result = 1;
    string AccountId = 2;
    string RoomId = 3;
}

message MessageRequest {
    string AccountId = 1;
    int32 type = 2;
    string Message = 3;
}

message MessageResponse {
    int32 Result = 1;
    string AccountId = 2;
    string RoomId = 3;
    string Message = 4;
}
